--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="txv_categorie_livre">Categories du livre</string>
     <string name="txv_code_livre">Code du livre</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">Accueil</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Tools</string>
